some bugs are fixed(icon and img not visible and dark theme problem)

--- a/dark.css
+++ b/dark.css
@@ -1,10 +1,14 @@
 :root {
-	--primary-color  : #121212;
-	--secondary-color: #242424;
+	--primary-color  : #161616;
+	--secondary-color: #323232;
 	--btn-color      : #C9F7F2;
 
-	--heading-txt: #ffffffde;
-	--normal-txt : #ffffff99;
+	--heading-txt: #dedede;
+	--normal-txt : #999999;
 
-	--box-shadow-color: #000000f6;
+	--box-shadow-color: #000000;
+}
+
+.theme-apply {
+	filter: invert(80%);
 }
